libreoffice (1:6.4.0~rc1-7) UNRELEASED; urgency=medium
 
  * debian/rules:
    - stop special-casing ure, uno-libs-private, libuno* epoch-wise to avoid
      confusion (especially since it was missed to apply that special-casing to
      lib*-java anyways)

 -- Rene Engelhard <rene@debian.org>  Thu, 02 Jan 2020 02:41:13 +0100

libreoffice (1:6.4.0~rc1-6) unstable; urgency=medium

  * debian/control.in, debian/control.ure.in:
    - fix typo: s/java:Depednds/java:Depends/g
  * debian/rules:
    - fix the URE/unoil/officebean jar splitout to actually work as
      expected (closes: #947909). Fix smoketest.jar move to
      -smoketest-data
    - don't try to remove the bogus base-files dependencies manually,
      use jh_depends -Xbase-files...
  * debian/control.in, debian/control.ure.in:
    - update Breaks:/Replaces: and add "reverse" Breaks:/Replaces:, too

 -- Rene Engelhard <rene@debian.org>  Fri, 03 Jan 2020 19:34:21 +0100

libreoffice (1:6.4.0~rc1-5) unstable; urgency=medium

  * debian/control.ure.in:
    - fix Breaks:/Replaces: on ure, it has no epoch... (closes: #947853)

 -- Rene Engelhard <rene@debian.org>  Tue, 31 Dec 2019 18:41:06 +0000

libreoffice (1:6.4.0~rc1-4) unstable; urgency=medium

  * debian/rules:
    - limit parallelism for running the tests to 1 so one can see
      directly which test fails/hangs; keep the second run in case
      of a failure nevertheless for flaky tests...
    - disable coinmp for now, tests hang

 -- Rene Engelhard <rene@debian.org>  Mon, 30 Dec 2019 16:54:09 +0100

libreoffice (1:6.4.0~rc1-3) unstable; urgency=medium

  readd test fixes which somewow got lost in preparation of -2:

  * debian/tests/control:
    - smoktest: add missing -nogui and add missing libreoffice-base-nogui
      to Depends:; but use calc and core since the test actually seems to want
      to use something from it 
    - junit: use the "GUI" packages
  * debian/control*in:
    - add more Breaks:/Replaces: for the new split-out Java packages (and