@@ -865,7 +865,6 @@ Architecture: alpha amd64 arm64 armel armhf i386 ia64 m68k mips mipsel mips64el 
 Section: java
 Depends: libofficebean-java,
          libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${binary:Version}),
-         ${java-common-depends},
          ${java-runtime-depends},
          ${java:Depends},
          ${misc:Depends},
@@ -1052,7 +1051,13 @@ Description: LibreOffice UNO runtime environment -- UNO interface library
 
 Package: libofficebean-java
 Section: java
-Depends: ${java:Depends}, ${misc:Depends}
+Depends: libjuh-java,
+         libjurt-java,
+         libofficebean-java,
+         libridl-java,
+         libunoil-java,
+         ${java:Depends},
+         ${misc:Depends}
 Architecture: all
 Replaces: libreoffice-officebean (<< 1:6.4.0~rc1-6)
 Breaks: libreoffice-officebean (<< 1:6.4.0~rc1-6)
@@ -4380,7 +4385,9 @@ Description: LibreOffice UNO runtime environment -- CPPU public library
 Package: libuno-cppuhelpergcc3-3
 Section: libs
 Architecture: alpha amd64 arm64 armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 m68k mips mipsel mips64 mips64el powerpc powerpcspe ppc64 ppc64el s390 s390x sparc sparc64
-Depends: uno-libs-private (= ${ure:Version}), ${misc:Depends}, ${shlibs:Depends}
+Depends: uno-libs-private (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Replaces: uno-libs3, ure (<< 5.0.0~rc2-1)
 Breaks: libreoffice-core (<< 1:4.3.0~), uno-libs3
 Description: LibreOffice UNO runtime environment -- CPPU helper library
@@ -4418,7 +4425,9 @@ Description: LibreOffice UNO runtime environment -- "purpose environment" helper
 Package: ure
 Section: libs
 Architecture: alpha amd64 arm64 armel armhf hppa i386 ia64 kfreebsd-amd64 kfreebsd-i386 m68k mips mipsel mips64 mips64el powerpc powerpcspe ppc64 ppc64el s390 s390x sparc sparc64
-Depends: uno-libs-private (= ${ure:Version}), ${misc:Depends}, ${shlibs:Depends}
+Depends: uno-libs-private (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Recommends: libjuh-java, libjurt-java, libridl-java, libunoloader-java
 Suggests: java5-runtime
 Replaces: libjuh-java (<< 1:6.4.0~rc1-6),
@@ -4446,7 +4455,7 @@ Description: LibreOffice UNO runtime environment
 Package: libjuh-java
 Architecture: all
 Section: java
-Depends: ${java:Depends}, ${misc:Depends}
+Depends: ure, ${java:Depends}, ${misc:Depends}
 Replaces: ure (<< 6.4.0~rc1-6)
 Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- Java Uno helper
@@ -4483,7 +4492,7 @@ Description: LibreOffice UNO runtime environment -- (Java) UNO loader
 Package: libjurt-java
 Architecture: all
 Section: java
-Depends: ${java:Depends}, ${misc:Depends}
+Depends: ure, ${java:Depends}, ${misc:Depends}
 Replaces: ure (<< 6.4.0~rc1-6)
 Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- Java Uno Runtime
@@ -4793,7 +4802,11 @@ Description: office productivity suite -- Evolution addressbook support
 Package: libreoffice-subsequentcheckbase
 Section: libs
 Architecture: all
-Depends: ${java:Depends}, ${misc:Depends}
+Depends: libjuh-java,
+         libridl-java,
+         libunoil-java,
+         ${java:Depends},
+         ${misc:Depends}
 Build-Profiles: <!nocheck>
 Description: LibreOffice java test libraries
  Java libraries LibreOffice subsequentchecks integration test suite
