@@ -641,7 +641,7 @@ Package: libreoffice-officebean
 Architecture: %OOO_JAVA_ARCHS%
 Section: java
 Depends: libreoffice-core (= ${binary:Version}) | libreoffice-core-nogui (= ${binary:Version}),
-         libofficebean-java, ${java-common-depends},
+         libofficebean-java,
          ${java-runtime-depends},
          ${java:Depends},
          ${misc:Depends},
@@ -816,7 +816,9 @@ Description: LibreOffice UNO runtime environment -- UNO interface library
 
 Package: libofficebean-java
 Section: java
-Depends: ${java:Depends}, ${misc:Depends}
+Depends: libofficebean-java,
+         libridl-java, libunoil-java, libjurt-java, libjuh-java,
+         ${java:Depends}, ${misc:Depends}
 Architecture: all
 Replaces: libreoffice-officebean (<< 1:6.4.0~rc1-6)
 Breaks: libreoffice-officebean (<< 1:6.4.0~rc1-6)
