@@ -1,7 +1,7 @@
 Package: libreoffice-subsequentcheckbase
 Section: libs
 Architecture: all
-Depends: ${java:Depends}, ${misc:Depends}
+Depends: libjuh-java, libridl-java, libunoil-java, ${java:Depends}, ${misc:Depends}
 Build-Profiles: <!nocheck>
 Description: LibreOffice java test libraries
  Java libraries LibreOffice subsequentchecks integration test suite
