@@ -131,7 +131,7 @@ Description: LibreOffice UNO runtime environment
 Package: libjuh-java
 Architecture: all
 Section: java
-Depends: ${java:Depends}, ${misc:Depends}
+Depends: ${java:Depends}, ${misc:Depends}, ure
 Replaces: ure (<< 6.4.0~rc1-6)
 Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- Java Uno helper
@@ -168,7 +168,7 @@ Description: LibreOffice UNO runtime environment -- (Java) UNO loader
 Package: libjurt-java
 Architecture: all
 Section: java
-Depends: ${java:Depends}, ${misc:Depends}
+Depends: ${java:Depends}, ${misc:Depends}, ure
 Replaces: ure (<< 6.4.0~rc1-6)
 Breaks: ure (<< 6.4.0~rc1-6)
 Description: LibreOffice UNO runtime environment -- Java Uno Runtime
