@@ -4,6 +4,11 @@ libreoffice (1:6.4.0~rc1-7) UNRELEASED; urgency=medium
     - stop special-casing ure, uno-libs-private, libuno* epoch-wise to avoid
       confusion (especially since it was missed to apply that special-casing to
       lib*-java anyways)
+   * debian/control.*.in:
+     - make libjuh-java Depends: ure since it loadLibrary()'s libjuh.so;
+       same with libjurt-java (libjava_uno.so)
+     - add some explicit dependencies on the new java packages to where they are
+       mentioned in Class-Path:
 
  -- Rene Engelhard <rene@debian.org>  Thu, 02 Jan 2020 02:41:13 +0100
 
